--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <h1>100-days-of-code</h1>
 
     <title>100-days-of-code</title>
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <h3>Contents:</h3>
     <a href="day001.html">Day 001</a>
+<br>
+    <a href="day002.html">Day 002</a>
+
   </body>
 </html>
