--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="day001.html">Day 001</a>
 <br>
     <a href="day002.html">Day 002</a>
+<br>
+    <a href="day003.html">Day 003</a>
 
   </body>
 </html>
