--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="day002.html">Day 002</a>
 <br>
     <a href="day003.html">Day 003</a>
+<br>
+    <a href="day004.html">Day 004</a>
 
   </body>
 </html>
