--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     <a href="day003.html">Day 003</a>
 <br>
     <a href="day004.html">Day 004</a>
+<br>
+    <a href="day005.html">Day 005</a>
+<br>
+    <a href="day006.html">Day 006</a>
+
+<!--    
+<br>
+    <a href="day007.html">Day 007</a>
+<br>
+    <a href="day008.html">Day 008</a>
+<br>
+    <a href="day009.html">Day 009</a>
+<br>
+    <a href="day010.html">Day 010</a>
+<br>
+-->
 
   </body>
 </html>
