--- a/index.html
+++ b/index.html
@@ -28,11 +28,36 @@
     <a href="day009.html">Day 009</a>
 <br>
     <a href="day010.html">Day 010</a>
+<br>
+    <a href="day011.html">Day 011</a>
+
 
 <!--
+<br>
+    <a href="day012.html">Day 012</a>
 
-
-
+<br>
+    <a href="day010.html">Day 013</a>
+<br>
+    <a href="day010.html">Day 014</a>
+<br>
+    <a href="day010.html">Day 015</a>
+<br>
+    <a href="day010.html">Day 016</a>
+<br>
+    <a href="day010.html">Day 017</a>
+<br>
+    <a href="day010.html">Day 018</a>
+<br>
+    <a href="day010.html">Day 019</a>
+<br>
+    <a href="day010.html">Day 020</a>
+<br>
+    <a href="day010.html">Day 021</a>
+<br>
+    <a href="day010.html">Day 022</a>
+<br>
+    <a href="day010.html">Day 023</a>
 <br>
 -->
 
