--- a/index.html
+++ b/index.html
@@ -9,59 +9,116 @@
   </head>
   <body>
     <h3>Contents:</h3>
-    <a href="day001.html">Day 001</a>
+    <a href="day001.html">Day 001 - Embedding a gist file</a>
 <br>
-    <a href="day002.html">Day 002</a>
+    <a href="day002.html">Day 002 - Marquee Tag</a>
 <br>
-    <a href="day003.html">Day 003</a>
+    <a href="day003.html">Day 003 - Div-Box Model using HTML and CSS</a>
 <br>
-    <a href="day004.html">Day 004</a>
+    <a href="day004.html">Day 004 - Usage of Tables in HTML</a>
 <br>
-    <a href="day005.html">Day 005</a>
+    <a href="day005.html">Day 005 - Usage of Lists in HTML</a>
 <br>
-    <a href="day006.html">Day 006</a>
+    <a href="day006.html">Day 006 - Image elements in HTML using CSS</a>
 <br>
-    <a href="day007.html">Day 007</a>
+    <a href="day007.html">Day 007 - HTML forms</a>
 <br>
-    <a href="day008.html">Day 008</a>
+    <a href="day008.html">Day 008 - Classes vs. Ids Model</a>
 <br>
-    <a href="day009.html">Day 009</a>
+    <a href="day009.html">Day 009 - Float and Clear using CSS</a>
 <br>
-    <a href="day010.html">Day 010</a>
+    <a href="day010.html">Day 010 - HTML Headings</a>
 <br>
-    <a href="day011.html">Day 011</a>
+    <a href="day011.html">Day 011 - HTML Colors</a>
 <br>
-    <a href="day012.html">Day 012</a>
+    <a href="day012.html">Day 012 - HTML Styles</a>
 <br>
-    <a href="day013.html">Day 013</a>
+    <a href="day013.html">Day 013 - Quotation Elements</a>
 <br>
-    <a href="day014.html">Day 014</a>
+    <a href="day014.html">Day 014 - HTML Iframe</a>
 <br>
-    <a href="day015.html">Day 015</a>
+    <a href="day015.html">Day 015 - HTML JavaScript</a>
 <br>
-    <a href="day016.html">Day 016</a>
+    <a href="day016.html">Day 016 - File Paths in HTML</a>
 <br>
-    <a href="day017.html">Day 017</a>
-
-<!--
-
-
-
+    <a href="day017.html">Day 017 - Void Elements</a>
 <br>
-    <a href="day018.html">Day 018</a>
+    <a href="day018.html">Day 018 - Movie Ranking Project</a>
 <br>
-    <a href="day019.html">Day 019</a>
+    <a href="day019.html">Day 019 - List Elements</a>    
 <br>
-    <a href="day020.html">Day 020</a>
-
+    <a href="day020.html">Day 020 - Nesting and Indentation</a>
 <br>
-    <a href="day010.html">Day 021</a>
+    <a href="day021.html">Day 021 - Anchor Elements</a>
 <br>
-    <a href="day010.html">Day 022</a>
+    <a href="day022.html">Day 022 - Image Elements</a>
 <br>
-    <a href="day010.html">Day 023</a>
+    <a href="day023.html">Day 023 - Birthday Invite Project</a>
 <br>
--->
+    <a href="day024.html">Day 024 - File Paths</a>
+<br>
+    <a href="day025.html">Day 025 - Web Pages</a>
+<br>
+    <a href="day026.html">Day 026 - HTML Portfolio Project</a>
+<br>
+    <a href="day027.html">Day 027 - Adding CSS</a>
+<br>
+    <a href="day028.html">Day 028 - CSS Selectors</a>
+<br>
+    <a href="day029.html">Day 029 - Color Vocab Project</a>
+<br>
+    <a href="day030.html">Day 030 - CSS Colors</a>
+<br>
+    <a href="day031.html">Day 031 - Font Properties</a>
+<br>
+    <a href="day032.html">Day 032 - CSS Box Model</a>
+<br>
+    <a href="day033.html">Day 033 - Motivation Meme Project</a>
+<br>
+    <a href="day034.html">Day 034 - CSS Cascade</a>
+<br>
+    <a href="day035.html">Day 035 - Combining Selectors</a>
+<br>
+    <a href="day036.html">Day 036 - CSS Positioning</a>
+<br>
+    <a href="day037.html">Day 037 - CSS Flag Project</a>
+<br>
+    <a href="day038.html">Day 038 - CSS Display</a>
+<br>
+    <a href="day039.html">Day 039 - CSS Float</a>
+<br>
+    <a href="day040.html">Day 040 - Responsiveness</a>
+<br>
+    <a href="day041.html">Day 041 - Media Query</a>
+<br>
+    <a href="day042.html">Day 042 - Web Design Agency Project</a>
+<br>
+    <a href="day043.html">Day 043 - Display Flex</a>
+<br>
+    <a href="day044.html">Day 044 - Flex Direction</a>
+<br>
+    <a href="day045.html">Day 045 - Flexbox Pricing Table Project</a>
+<br>
+    <a href="day046.html">Day 046 - Display Grid</a>
+<br>
+    <a href="day047.html">Day 047 - Grid Sizing</a>
+<br>
+    <a href="day048.html">Day 048 - Grid Placement</a>
+<br>
+    <a href="day049.html">Day 049 - Mondarian Project</a>
+<br>
+    <a href="day050.html">Day 050 - Bootstrap Card</a>
+<br>
+    <a href="day051.html">Day 051 - Bootstrap Components</a>
+<br>
+    <a href="day052.html">Day 052 - TinDog Project</a>
+<br>
+    <a href="day053.html">Day 053 - My Country Flag</a>
+<br>
+    <a href="day053.html">Day 054 - My Resume Project</a>
+<br>
+    <a href="day054.html">Day 053 - My Personal Site</a>
+<br>
 
   </body>
 </html>
