--- a/index.html
+++ b/index.html
@@ -83,41 +83,43 @@
 <br>
     <a href="day037.html">Day 037 - CSS Flag Project</a>
 <br>
-    <a href="day038.html">Day 038 - CSS Display</a>
+    <a href="day038.html">Day 038 - CSS Display Horizontal</a>
 <br>
-    <a href="day039.html">Day 039 - CSS Float</a>
+    <a href="day039.html">Day 039 - CSS Display Vertical</a>
 <br>
-    <a href="day040.html">Day 040 - Responsiveness</a>
+    <a href="day040.html">Day 040 - CSS Float</a>
 <br>
-    <a href="day041.html">Day 041 - Media Query</a>
+    <a href="day041.html">Day 041 - Responsiveness</a>
 <br>
-    <a href="day042.html">Day 042 - Web Design Agency Project</a>
+    <a href="day042.html">Day 042 - Media Query</a>
 <br>
-    <a href="day043.html">Day 043 - Display Flex</a>
+    <a href="day043.html">Day 043 - Web Design Agency Project</a>
 <br>
-    <a href="day044.html">Day 044 - Flex Direction</a>
+    <a href="day044.html">Day 044 - Display Flex</a>
 <br>
-    <a href="day045.html">Day 045 - Flexbox Pricing Table Project</a>
+    <a href="day045.html">Day 045 - Flex Direction</a>
 <br>
-    <a href="day046.html">Day 046 - Display Grid</a>
+    <a href="day046.html">Day 046 - My Country Flag</a>
 <br>
-    <a href="day047.html">Day 047 - Grid Sizing</a>
+    <a href="day047.html">Day 047 - Flexbox Pricing Table Project</a>
 <br>
-    <a href="day048.html">Day 048 - Grid Placement</a>
+    <a href="day048.html">Day 048 - Display Grid</a>
 <br>
-    <a href="day049.html">Day 049 - Mondarian Project</a>
+    <a href="day049.html">Day 049 - Grid Sizing</a>
 <br>
-    <a href="day050.html">Day 050 - Bootstrap Card</a>
+    <a href="day050.html">Day 050 - Grid Placement</a>
 <br>
-    <a href="day051.html">Day 051 - Bootstrap Components</a>
+    <a href="day051.html">Day 051 - Mondarian Project</a>
 <br>
-    <a href="day052.html">Day 052 - TinDog Project</a>
+    <a href="day052.html">Day 052 - Bootstrap Card</a>
 <br>
-    <a href="day053.html">Day 053 - My Country Flag</a>
+    <a href="day053.html">Day 053 - Bootstrap Components</a>
 <br>
-    <a href="day054.html">Day 054 - My Resume Project</a>
+    <a href="day054.html">Day 054 - TinDog Project</a>
 <br>
-    <a href="day055.html">Day 055 - My Personal Site</a>
+    <a href="day055.html">Day 055 - My Resume Project</a>
+<br>
+    <a href="day056.html">Day 056 - My Personal Site</a>
 <br>
 
   </body>
