--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
 <br>
     <a href="day054.html">Day 054 - TinDog Project</a>
 <br>
-    <a href="day055.html">Day 055 - My Resume Project</a>
-<br>
-    <a href="day056.html">Day 056 - My Personal Site</a>
+    <a href="day055.html">Day 055 - Sample Resume Project</a>
 <br>
 
   </body>
